--- a/src/app/form-modele/form-modele.component.html
+++ b/src/app/form-modele/form-modele.component.html
@@ -3,8 +3,8 @@
 <!--username-->
 <div class="form-group"
 [ngClass]="{
-'has-danger': username.invalid && (username.dirty || username.touched),
-'has-success': username.valid && (username.dirty || username.touched)
+'danger': username.invalid && (username.dirty || username.touched),
+'success': username.valid && (username.dirty || username.touched)
 }">
 <label>Username</label>
 <input type="text"
@@ -26,8 +26,8 @@
 <!--password-->
 <div class="form-group"
 [ngClass]="{
- 'has-danger': password.invalid && (password.dirty || password.touched),
- 'has-success': password.valid && (password.dirty || password.touched)
+ 'danger': password.invalid && (password.dirty || password.touched),
+ 'success': password.valid && (password.dirty || password.touched)
 }">
 <label>Password</label>
 <input type="password"
@@ -37,10 +37,11 @@
 <div class="form-control-feedback"
   *ngIf="password.errors && (password.dirty || password.touched)">
 <p *ngIf="password.errors.required">Password is required</p>
-<p *ngIf="password.errors.minlength">Password must be 8 characters long, we need another {{password.errors.minlength.requiredLength - password.errors.minlength.actualLength}} characters </p>
+<p *ngIf="password.errors.minlength">Password must be <br> 6 characters long.</p>
+<p *ngIf="password.errors.maxlength">Password must be <br> 8 characters long.</p>
 </div>
 </div>
-    <pre>{{myform.value | json}}</pre>
+    <!-- <pre>{{myform.value | json}}</pre> -->
     <button type="submit"
-    class="btn btn-primary">Submit
+    class="btn btn-dark">Submit
 </button>
